# syndiff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yaml
fixtures/json/: add_property.after  add_property.before  rename_key.after  rename_key.before
fixtures/rust/: rename_function.after  rename_function.before
src/: lib.rs  syntax_delimiters.rs  syntax_graph.rs  syntax_tree.rs  tests.rs
tests/: diffing.rs
