[package]
name = "syndiff"
version = "0.1.1"
edition = "2024"
authors = ["Marco Mihai Condrache"]
license = "MIT"
description = "Standalone library that implements a structural diff algorithm inspired by Difftastic"
keywords = ["diff", "tree-sitter", "syntax", "structural", "ast"]
categories = ["algorithms", "text-processing", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/syndiff/"

[dependencies]
arrayvec = "0.7.6"
tree-sitter = "0.26.3"
strsim = "0.11.1"
rustc-hash = "2.1.1"
imara-diff = "0.2.0"
