[package]
name = "syndiff"
version = "0.2.0"
edition = "2021"
authors = ["Marco Mihai Condrache"]
license = "MIT"
description = "Standalone library that implements a structural diff algorithm inspired by Difftastic"
keywords = ["diff", "tree-sitter", "syntax", "structural", "ast"]
categories = ["algorithms", "text-processing", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/syndiff/"

[dependencies]
arrayvec = "0.7.6"
tree-sitter = "0.26.3"
strsim = "0.11.1"
rustc-hash = "2.1.1"
imara-diff = "0.2.0"
smallvec = "1.15.1"

[dev-dependencies]
indoc = "2.0.7"
tree-sitter-rust = "0.24.0"
tree-sitter-json = "0.24.8"
rstest = "0.26.1"
